<?xml version="1.0" encoding="utf-8"?>
<!--
	Project:  NextGISDroid
 	Purpose:  Gathering position information and data
    Author:   Baryshnikov Dmitriy  (aka Bishop), polimax@mail.ru
    Copyright (C) 2012 NextGIS

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_title" >
	<PreferenceCategory
		android:title="@string/pref_cat_main">
		<EditTextPreference
		    android:key="user_id"
		    android:title="@string/pref_uid_name"
		    android:summary="@string/pref_uid_summary"
		    android:defaultValue=""
		    android:dialogTitle="@string/pref_uid_dlg_title" />		
		<EditTextPreference
		    android:key="storage_site"
		    android:title="@string/pref_site_name"
		    android:summary="@string/pref_site_summary"
		    android:defaultValue="http://gis-lab.info"
		    android:dialogTitle="@string/pref_site_dlg_title" />
		<CheckBoxPreference
		    android:key="start_services_on_startup"
			android:title="@string/pref_start_services_onstartup"
			android:defaultValue="false"			
			android:summary="@string/pref_start_services_onstartup_summary" /> 		
	</PreferenceCategory>
	<PreferenceCategory
	    android:title="@string/sMap">
   		<ListPreference
		    android:key="map_tile_size"
		    android:title="@string/pref_tile_size_name"
		    android:summary="@string/pref_tile_size_summary"
			android:defaultValue="256"
			android:entries="@array/tilesize"
			android:entryValues="@array/tilesize"
			android:dialogTitle="@string/pref_tile_size_name_dlg_title" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_cat_acc">
		<CheckBoxPreference
		    android:key="accurate_coordinates_pick"
			android:title="@string/pref_accurate_coordinates_pick"
			android:defaultValue="false"			
			android:summary="@string/pref_accurate_coordinates_pick_summary" />
		<EditTextPreference
		    android:key="accurate_coordinates_pick_count"
		    android:title="@string/pref_accurate_coordinates_pick_count"
		    android:summary="@string/pref_accurate_coordinates_pick_count_summary"
		    android:defaultValue="60"
		    android:dialogTitle="@string/pref_accurate_coordinates_pick_count"
		    android:inputType="number" />	 		
		<ListPreference
		    android:key="accurate_type"
		    android:title="@string/pref_accurate_ce"
		    android:summary="@string/pref_accurate_ce_summary"
			android:defaultValue="CE50"
			android:entries="@array/accuracy"
			android:entryValues="@array/accuracy"
			android:dialogTitle="@string/pref_accurate_ce_summary" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_cat_compass">
		<ListPreference
		    android:key="coordinates_format"
		    android:title="@string/pref_coordinates_format_name"
		    android:summary="@string/pref_coordinates_format_summary"
			android:defaultValue="DD-MM-SS.SS"
			android:entries="@array/coordinates_format"
			android:entryValues="@array/coordinates_format"
			android:dialogTitle="@string/pref_coordinates_format_dlg_title" />
		<CheckBoxPreference
		    android:key="compass_vibration"
			android:title="@string/pref_compass_vibration"
			android:defaultValue="true"			
			android:summary="@string/pref_compass_vibration_summary" />		
		<CheckBoxPreference
		    android:key="compass_wake_lock"
			android:title="@string/pref_compass_wake_lock"
			android:defaultValue="true"			
			android:summary="@string/pref_compass_wake_lock_summary" />	
		<CheckBoxPreference
		    android:key="compass_true_north"
			android:title="@string/pref_compass_true_north"
			android:defaultValue="true"			
			android:summary="@string/pref_compass_true_north_summary" />	
		<CheckBoxPreference
		    android:key="compass_show_magnetic"
			android:title="@string/pref_compass_show_magnetic"
			android:defaultValue="true"			
			android:summary="@string/pref_compass_show_magnetic_summary" />						
	</PreferenceCategory>
	<PreferenceCategory
	android:title="@string/pref_cat_datasenser">
		<ListPreference
		    android:key="time_between_datasend"
		    android:title="@string/pref_time_between_sendpos_name"
		    android:summary="@string/pref_time_between_sendpos_summary"
			android:defaultValue="5 min"
			android:entries="@array/datapos_send_updates"
			android:entryValues="@array/datapos_send_updates"
			android:dialogTitle="@string/pref_time_between_sendpos_dlg_title" />
		<CheckBoxPreference
		    android:key="sw_energy_economy"
			android:title="@string/pref_energy_economy_name"
			android:defaultValue=""			
			android:summary="@string/pref_energy_economy_summary" />
		<CheckBoxPreference
		    android:key="sw_sendpos_service"
			android:title="@string/pref_sendpos_name"
			android:defaultValue="false"			
			android:summary="@string/pref_sendpos_service" />   		
	</PreferenceCategory>    
    <PreferenceCategory
		android:title="@string/pref_cat_tracker">
		<ListPreference
		    android:key="min_dist_change_for_update"
		    android:title="@string/pref_tracker_min_dist_update_name"
		    android:summary="@string/pref_tracker_min_dist_update_summary"
			android:defaultValue="5 m"
			android:entries="@array/tracker_min_dist_update"
			android:entryValues="@array/tracker_min_dist_update"
			android:dialogTitle="@string/pref_tracker_min_dist_update_dlg_title" />
		<ListPreference
		    android:key="min_time_beetwen_updates"
		    android:title="@string/pref_tracker_min_time_between_updates_name"
		    android:summary="@string/pref_tracker_min_time_between_updates_summary"
		    android:defaultValue="1 min"
			android:entries="@array/tracker_min_time_between_updates"
			android:entryValues="@array/tracker_min_time_between_updates"
			android:dialogTitle="@string/pref_tracker_min_time_between_updates_dlg_title" />	    
		<CheckBoxPreference
		    android:key="sw_track_service"
			android:title="@string/pref_tracker_name"
			android:defaultValue="false"			
			android:summary="@string/pref_tracker_service" />        
	</PreferenceCategory>

</PreferenceScreen>
