<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:sabd="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_menu_main">

        <item
            android:id="@+id/menu_add"
            android:orderInCategory="100"
            sabd:showAsAction="always"
            android:icon="@drawable/ic_action_add"
            android:title="@string/add">

            <menu>
                <item
                    android:id="@+id/menu_add_zip"
                    android:title="@string/add_zip"/>
                <item
                    android:id="@+id/menu_add_json"
                    android:title="@string/add_geojson"/>
                <item
                    android:id="@+id/menu_add_tms"
                    android:title="@string/add_tms"/>
                <item
                    android:id="@+id/menu_add_ngw"
                    android:title="@string/add_ngw"/>
            </menu>
        </item>

        <item
            android:id="@+id/menu_record_gpx"
            android:orderInCategory="100"
            sabd:showAsAction="always"
            android:icon="@drawable/ic_gpx_record_start"
            android:title="@string/gpx_record"/>

        <item
            android:id="@+id/menu_info"
            android:orderInCategory="100"
            sabd:showAsAction="always"
            android:icon="@drawable/ic_action_about"
            android:title="@string/info"/>

        <item
            android:id="@+id/menu_pan"
            android:orderInCategory="100"
            sabd:showAsAction="always"
            android:icon="@drawable/ic_pan2"
            android:title="@string/pan"/>

        <item
            android:id="@+id/menu_compass"
            android:orderInCategory="100"
            sabd:showAsAction="never"
            android:icon="@drawable/ic_menu_compass"
            android:title="@string/compass_title"/>

        <item
            android:id="@+id/menu_settings"
            android:orderInCategory="100"
            sabd:showAsAction="never"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/menu_about"
            android:orderInCategory="100"
            sabd:showAsAction="never"
            android:icon="@drawable/ic_action_about"
            android:title="@string/about"/>

    </group>

    <group
        android:id="@+id/group_menu_edit_layer">

        <item
            android:id="@+id/menu_save"
            android:title="@string/save_layer"
            android:icon="@drawable/ic_action_accept"
            android:orderInCategory="1"
            sabd:showAsAction="always"/>

        <item
            android:id="@+id/menu_change_attributes"
            android:title="@string/change_attributes"
            android:icon="@drawable/ic_action_settings"
            android:orderInCategory="2"
            sabd:showAsAction="always"/>

        <item
            android:id="@+id/menu_cancel"
            android:title="@string/cancel"
            android:icon="@drawable/ic_action_cancel"
            android:orderInCategory="3"
            sabd:showAsAction="always"/>

    </group>

    <group
        android:id="@+id/group_menu_edit_fields">

        <item
            android:id="@+id/menu_edit_fields_save"
            android:title="@string/save_layer"
            android:icon="@drawable/ic_action_accept"
            android:orderInCategory="1"
            sabd:showAsAction="always"/>

        <item
            android:id="@+id/menu_edit_fields_cancel"
            android:title="@string/cancel"
            android:icon="@drawable/ic_action_cancel"
            android:orderInCategory="2"
            sabd:showAsAction="always"/>

    </group>

</menu>
