<?xml version="1.0" encoding="utf-8"?>
<!--
	Project:  NextGIS Mobile
 	Purpose:  mobile GIS for Android
    Author:   Dmitry Baryshnikov (aka Bishop), polimax@mail.ru
    Copyright (C) 2012-2013 NextGIS

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/input_poi_step1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:text="@string/input_poi_cat"/>
        
	    <Spinner 
	        android:id="@+id/spinner_cat"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/input_poi_cat"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	    />
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:text="@string/input_poi_subcat"/>
        
	    <Spinner 
	        android:id="@+id/spinner_subcat"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/input_poi_subcat"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	    />	    
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:text="@string/input_poi_subcatcustom"/>
	            
	    <EditText
	        android:id="@+id/spinner_subcat_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" 
            android:enabled="false"
            android:textAppearance="?android:attr/textAppearanceMedium">
        </EditText>

    </LinearLayout>

</FrameLayout>